# ann-cpp

./: .clang-format  .gitignore  CLion_Code_Style_ann-cpp.xml  CMakeLists.txt  CMakeSettings.json  DMatrix.cpp  DMatrix.h  LICENSE  MNIST.cpp  MNIST.h  MatrixMulUtil.cpp  MatrixMulUtil.h  NeuralNetwork.cpp  README.md  build.bat  build.sh  build_cuda.bat  linalg_tests.cpp  linalg_tests.h  main.cpp  mnist.cpp  mnist.h
annlib/: .clang-format  ActivationFunction.cpp  ActivationFunction.h  CMakeLists.txt  CostFunction.cpp  CostFunction.h  CostFunctionRegularization.cpp  CostFunctionRegularization.h  MomentumStochasticGradientDescentTrainer.cpp  MomentumStochasticGradientDescentTrainer.h  NetworkLayer.cpp  NetworkLayer.h  NeuralNetwork.cpp  NeuralNetwork.h  SGDTrainer.cpp  SGDTrainer.h  TrainingData.h  _calc_macros.h  activation_function.cpp  activation_function.h  activationfunction.h  cost_function.cpp  cost_function.h  costfunction.h  costfunctionreg.cpp  costfunctionreg.h  gradient_based_optimizer.cpp  gradient_based_optimizer.h  net_init.cpp  net_init.h  netinit.cpp  netinit.h  network_layer.cpp  network_layer.h  networklayer.h  neural_network.cpp  neural_network.h  neuralnetwork.cpp  output_layer.cpp  output_layer.h  (+11 more)
annlib/cuda/: CMakeLists.txt  activation_function_cudaops.cu  activation_function_cudaops.cuh  gradient_based_optimizer_cudaops.cu  gradient_based_optimizer_cudaops.cuh  sgd_trainer_cudaops.cu  sgd_trainer_cudaops.cuh  weight_norm_penalty_cudaops.cu  weight_norm_penalty_cudaops.cuh
annlib/log/: training_logger.cpp  training_logger.h
linalg/: CMakeLists.txt  DColumnVector.cpp  DColumnVector.h  DMatrix.cpp  DMatrix.h  DRowVector.cpp  DRowVector.h  MatrixMulUtil.cpp  MatrixMulUtil.h  dev_vector.h  dmatrix.cpp  dmatrix.h  general_util.h  mat_arr.cpp  mat_arr.h  mat_arr_math.cpp  mat_arr_math.h  mat_arr_math_t.h  matrixmulutil.cpp  matrixmulutil.h  synced_vectors.h
linalg/cuda/: CMakeLists.txt  cuda_util.cuh  linalg_cudaops.cu  linalg_cudaops.cuh  linalg_cudaops_t.cuh
src/: linalg_tests.h  main.cpp  mnist.cpp  mnist.h
src/annlib/: CMakeLists.txt  _calc_macros.h  activation_function.cpp  activation_function.h  convolution_layer.cpp  convolution_layer.h  gradient_based_optimizer.cpp  gradient_based_optimizer.h  mini_batch_builder.cpp  mini_batch_builder.h  network_layer.cpp  network_layer.h  output_layer.cpp  output_layer.h  sgd_trainer.cpp  sgd_trainer.h  training_buffer.cpp  training_buffer.h  training_data.cpp  training_data.h  weight_norm_penalty.h
src/annlib/cuda/: CMakeLists.txt  activation_function_cudaops.cu  activation_function_cudaops.cuh  cost_function_cudaops.cu  cost_function_cudaops.cuh
src/annlib_tasks/: CMakeLists.txt  unambiguous_classification.cpp  unambiguous_classification.h
src/linalg/: CMakeLists.txt  mat_arr.cpp  mat_arr.h  mat_arr_math.cpp  mat_arr_math.h  mat_arr_math_t.h  synced_vectors.h
src/linalg/cuda/: CMakeLists.txt
test/: CMakeLists.txt
test/linalg/: CMakeLists.txt  DMatrix_Test.cpp
